1.7
- Book 6 available
- Improvements on map zoom (not the best, but It Works)
- Fixed bug on book 1 / sect246: Drop 2 Crowns was not applied
- Fixed bug on book 4 / sect194 and sect234: "If you have the Kai Discipline of Mind Over Matter, you can add 2 to the number you 
  have picked." was not applied
- Fixed bug on book 5 / sect23: Lose 1 E.P. was not applied
- Fixed bug choosing CS / EP: Book language inconsistencies: Spanish books say "ignore zero", English does not
- Fixed bug with random table: If it was "computer generated", the "ten as zero", and "ignore zeros" rules were ignored
- Fixed bug: On section where you can buy things: If you drop an object that can be buy, if you re-pick it, 
  the object sell disappears
- Fixed bug: At the start of each book, if the player had not a backpack, pick one.

1.7.1
- Fixed bug with number of disciplines to choose if you have played previous books

1.7.2
- Fixed bug on book 6 / sect271: If the random number was 5 or less, no choice was activated

1.8
- Book 7 available
- Show authors biography
- Added warning about book 5 map (cities flags)

1.9
- Book 8 available
- Import / export saved games
- Kai monastery safekeeping: Now you can drop objects on the Kai monastery and they will be available on the next book
- Combats: Explain combat ratio link
- Added 6 arrows limit for quivers
- Added "Lore-circles of the Magnakai" to "Game rules"
- Book 1, sect342: Fixed bug with mindblast
- Fixed bug on book 5 / sect242: +3 for Mindshield was not applied
- Book 5, sect29, sect305: Fixed bug dropping rope
- Book 3, sect155: Fixed bug if you pick 9 on the Random table and you had Endurance > 20 (wrong bonus)
- Book 1, sect307: Fixed bug (missed pick Meal)

1.10
- Book 6, sect307: Fixed bug (you can buy many meals as you want)