@@ -63,7 +63,7 @@ FOR FUTURE (1.9+):
 - Add night mode (brffff...)
 - Dialogs with text input: Allow to confirm with the screen keyboard ("go" button)
 - Remove the "Alert" text from the message dialog (same for confirms)
-- Objects on the Action Chart should have a "available uses count". See "larnumaliqueur" object, book 8, sect228
+- Objects on the Action Chart should have a "available uses count". See "larnumaliqueur" object, book 8, sect228; see "vialbluepills2" object
 - Google Play will require API 26 on november 2018 (upgrade Cordova version?)
 
 Reminders:
