@@ -37,3 +37,4 @@
 
 1.10
 - Book 6, sect307: Fixed bug (you can buy many meals as you want)
+- Book 2, sect238: Fixed bug with the "silver token" (semi-fixed, now you get 1 Gold Crown)
